tests/paczka1/fuzzy1/40251942.err
Error in line 3: 33R A840 80,8
Error in line 2: S106 A840 8,7
Error in line 19: 4qEn2l S106 -2,5
Error in line 20: v38 S106 93,1
Error in line 21: 5DKJ7P5qIOL A840 22,8
Error in line 25: S106 S544 39,3
Error in line 18: 33R S609 42,8
Error in line 13: 4qEn2l S106 76,5
